# blbl_anly

./: .gitignore  README.md  bilibili_video_analysis.py  bilibili_video_scraper.py  remove_background.py  requirements.txt  requirements_bg_removal.txt  罗翔说刑法_videos_20251215.csv
.github/workflows/: release.yml
bilibili-analyzer-react/: MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
bilibili-analyzer-react/src/: App.jsx  index.css  main.jsx
bilibili-analyzer-react/src-tauri/: tauri.conf.json
bilibili-analyzer-react/src-tauri/src/: lib.rs  main.rs
bilibili-analyzer-react/src/components/: HomePage.jsx  NewScrapeDialog.jsx  SettingsDialog.jsx  Sidebar.jsx  UpDetailPage.jsx  VideoDetailDrawer.jsx  VideoFilterBar.jsx  VirtualGrid.jsx
bilibili-analyzer-react/src/hooks/: index.js  useECharts.js  useGrowthData.js  useGrowthMetrics.js  useVideoFilter.js  useVideoMetrics.js  爆款计算公式.md
bilibili-analyzer-react/src/utils/: chartUtils.js  constants.js  crossUpInsights.js  index.js  supabase.js  theme.js  timeAnalysis.js  titleInsights.js
bilibili-analyzer-tauri/: TAILWIND_USAGE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
bilibili-analyzer-tauri/src/: App.vue  style.css  theme.js  utils.js
bilibili-analyzer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
bilibili-analyzer-tauri/src-tauri/icons/: icon.icns
bilibili-analyzer-tauri/src-tauri/src/: lib.rs
bilibili-analyzer-tauri/src/components/: HomePage.vue  NewScrapeDialog.vue  (+6 more)
(+31 files in other folders)
