[package]
name = "bilibili-analyzer"
version = "1.0.0"
description = "B站UP主视频数据分析工具"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "bilibili_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
